# heat-equation-visualisation

./: README.md  mol_visualisation.py  solver_implementation.py
one-dimension/: series_visualisation.py
one-dimension/solvers/: mol_solver.py  series_solver.py  solver.py
one-dimension/src/: series_solver.py  solver.py  solver_example.py
solvers/: series_solver.py  solver.py
three-dimensions/: .gitignore  CMakeLists.txt
three-dimensions/shaders/: cube.vert  triangle.frag  triangle.vert
three-dimensions/src/: camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
